# gambi

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  PLAN.md  README.md  install.sh  package-lock.json  package.json  playwright.config.js
.github/workflows/: ci.yml  release.yml
playwright/tests/: admin-ui.spec.js
playwright/tests/helpers/: gambi.js
scripts/: capture-admin-screenshots.js  generate-homebrew-formula.sh  test-harness.sh  test-ui.sh
src/: auth.rs  cli.rs  config.rs  execution.rs  fixture_progress.rs  logging.rs  main.rs  namespacing.rs  sse_transport.rs  upstream.rs
src/server/: admin.rs  mcp.rs  mod.rs
tests/: admin_config_ui.rs  admin_only_mode.rs  agent_discovery_contract.rs  auth_admin.rs  cancellation_passthrough.rs  execute_multi_upstream.rs  execution_engine.rs  legacy_sse.rs  progress_passthrough.rs  reliability_harness.rs  remote_http_auth.rs  shared_admin_mode.rs  upstream_passthrough.rs
tests/support/: mod.rs
